--- a/include/minisite-base.css
+++ b/include/minisite-base.css
@@ -105,6 +105,7 @@
 	display: table;
 	table-layout: fixed;
 	width: 100%;
+	overflow: hidden;
 
 }
 
@@ -286,55 +287,6 @@ div {
 			#flags .active img {
 				border: 1px solid #f00;
 			}
-
-/* Main navigation */
-
-#nav {
-	min-height: 14px;
-	font-size: 0.8em;
-	margin: 1px 0 0 -1px;
-	clear: both;
-	}
-	#nav a, #nav a:link, #nav a:visited {
-		display: block;
-		float: left;
-		width: 145px;
-		line-height: 28px;
-		height: 28px;
-		margin-left: 1px;
-
-		background: #cfd0d2; /* Old browsers */
-		background: -moz-linear-gradient(top, #cfd0d2 0%, #ffffff 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#cfd0d2), color-stop(100%,#ffffff)); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top, #cfd0d2 0%,#ffffff 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top, #cfd0d2 0%,#ffffff 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top, #cfd0d2 0%,#ffffff 100%); /* IE10+ */
-		background: linear-gradient(top, #cfd0d2 0%,#ffffff 100%); /* W3C */
-
-		text-transform: uppercase;
-		text-decoration: none;
-		text-align: center;
-		color: #862165;
-		-webkit-transition: opacity 0.2s linear; -moz-transition: opacity 0.2s linear; transition: opacity 0.2s linear;
-		outline: none;
-		font-size: 11px;
-		font-weight: bold;
-		border-radius: 7px 7px 0 0;
-		border: 1px solid #cfd0d2;
-		}
-	#nav a.active, #nav a:hover {
-		background: #852262; /* Old browsers */
-		background: -moz-linear-gradient(top, #852262 0%, #97427b 100%); /* FF3.6+ */
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#852262), color-stop(100%,#97427b)); /* Chrome,Safari4+ */
-		background: -webkit-linear-gradient(top, #852262 0%,#97427b 100%); /* Chrome10+,Safari5.1+ */
-		background: -o-linear-gradient(top, #852262 0%,#97427b 100%); /* Opera 11.10+ */
-		background: -ms-linear-gradient(top, #852262 0%,#97427b 100%); /* IE10+ */
-		background: linear-gradient(top, #852262 0%,#97427b 100%); /* W3C */
-		
-		color: #fff;
-		border: 1px solid #caaac1;
-		
-	}
 
 /* Buttons */
 
@@ -594,6 +546,7 @@ table {
 	margin-right: auto !important;
 	display: block;
 	width: 90%;
+	overflow: auto;
 	}
 	table {
 		border-collapse: collapse;
@@ -634,9 +587,11 @@ table {
 	table tr:first-child {
 		background: #292b2e;
 		}
+/*
 	.table-container {
 		overflow: scroll;
 		}
+*/
 
 /* Footer */
 
